@@ -11,9 +11,11 @@ __status__ = "Production"
 import logging
 
 from renderapi.exceptions import InvalidKeyException
-from renderapi.owners import Owners
-from renderapi.custom_domains import CustomDomains
-from renderapi.jobs import Jobs
+from renderapi.endpoints.owners import Owners
+from renderapi.endpoints.services import Services
+from renderapi.endpoints.deploys import Deploys
+from renderapi.endpoints.custom_domains import CustomDomains
+from renderapi.endpoints.jobs import Jobs
 
 class RenderApi:
     '''render API main class'''
@@ -28,5 +30,7 @@ class RenderApi:
             raise InvalidKeyException('Empty key provided')
 
         self.owners = Owners(self.api_key)
+        self.deploys = Deploys(self.api_key)
         self.custom_domains = CustomDomains(self.api_key)
         self.jobs = Jobs(self.api_key)
+        self.services = Services(self.api_key)
